# CG_task1

./: .gitignore  .gitignore.swp  CMakeLists.txt  Readme.md  rt  rt.cbp  zout.ppm
src/: Scene.cpp  Scene.h  main.cpp
src/Bitmap/: Bitmap.cpp  Bitmap.h
src/Objects/: Checkboard.cpp  Checkboard.h  Light.h  MeshTriangle.cpp  MeshTriangle.h  Object.cpp  Object.h  Pyramid.cpp  Pyramid.h  Sphere.cpp  Sphere.h
src/Vectors/: vectors.cpp  vectors.h
src/misc/: Image.h  misc.cpp  misc.h
